another bug fix?

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>AimPoint LLC</h2>
               <br/>
-                <p>Firearms instruction done right!</p>
+                <p>Firearms Training for Everyone!</p>
                 <br/>
               </div>
         </div>
