--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,10 @@
               <h2>Aim Point LLC</h2>
               <br/>
                 <p>Firearms Training for Everyone!</p>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                  <img class="img-responsive" src="img/services/{{ post.img }}" alt="">
+                </div>
+                <p>Aim Point LLC is a firearms training and consulting service based in Pittsburgh, PA.  Aim Point LLC services the greater Pittsburgh area including Westmorland, Washington and Fayette counties.  Aim Point LLC is geared towards beginning shooters as well as those wanting to improve their marksmanship skills.  I teach from an interactive hands on approach using simulated weapons (SIRT pistols) as well as various types of firearms.</p>
                 <br/>
               </div>
         </div>
