--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,8 +7,8 @@
               <p>Firearms Training for Everyone!</p>
               <br/>
                 <p>Aim Point LLC is a firearms training and consulting service based in Pittsburgh, PA.  Aim Point LLC services the greater Pittsburgh area including Westmorland, Washington and Fayette counties.  Aim Point LLC is geared towards beginning shooters as well as those wanting to improve their marksmanship skills.  I teach from an interactive hands on approach using simulated weapons (SIRT pistols) as well as various types of firearms.</p>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                  <img class="img-responsive" src="img/" alt="">
+                <div class="col-lg-8 col-lg-offset-2">
+                  <img class="img-responsive" src="img/sylvia.jpg" alt="">
                 </div>
                 <br/>
               </div>
