--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,11 +6,22 @@
               <h2>Aim Point LLC</h2>
               <p>Firearms Training for Everyone!</p>
               <br/>
-                <p>Aim Point LLC is a firearms training and consulting service based in Pittsburgh, PA.  Aim Point LLC services the greater Pittsburgh area including Westmorland, Washington and Fayette counties.  Aim Point LLC is geared towards beginning shooters as well as those wanting to improve their marksmanship skills.  I teach from an interactive hands on approach using simulated weapons (SIRT pistols) as well as various types of firearms.</p>
-                <div class="col-lg-8 col-lg-offset-2">
-                  <img class="img-responsive" src="img/sylvia.jpg" alt="">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2>Founder and Firearms Instructor--Sylvia Bergstedt</h2>
+                    <p>[ Retired Law Enforcement Officer ]
+I have over 28 years of military and Federal Law Enforcement training combined. In 2011 I retired as a LtCol in the Air Force Reserves working as a Special Agent with the US Air Force Office of Special Investigation (AFOSI).  In addition, I recently retired from federal service as a Special Agent.
+​
+I have been trained in various firearms and defensive tactics and am a small arms Marksmanship expert.
+​
+Certified as a Federal Law Enforcement Training Center (FLETC) Active Shooter Instructor and National Rifle Association Basics Pistol Instructor.  Certified in Ultimate Training Munitions instruction as well.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/sylvia" alt="">
                 </div>
                 <br/>
+
               </div>
         </div>
     </section>
