--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@ I have been trained in various firearms and defensive tactics and am a small arm
 Certified as a Federal Law Enforcement Training Center (FLETC) Active Shooter Instructor and National Rifle Association Basics Pistol Instructor.  Certified in Ultimate Training Munitions instruction as well.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/sylvia" alt="">
+                    <img class="img-responsive" src="img/sylvia.jpg" alt="">
                 </div>
                 <br/>
 
