--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,16 +7,16 @@
               <p>Firearms Training for Everyone!</p>
               <br/>
               <h2>Founder and Firearms Instructor--Sylvia Bergstedt</h2>
-              <p>[ Retired Law Enforcement Officer ]
-I have over 28 years of military and Federal Law Enforcement training combined. In 2011 I retired as a LtCol in the Air Force Reserves working as a Special Agent with the US Air Force Office of Special Investigation (AFOSI).  In addition, I recently retired from federal service as a Special Agent.
+              <p>[ Retired Law Enforcement Officer ]</p>
+              <p>I have over 28 years of military and Federal Law Enforcement training combined. In 2011 I retired as a LtCol in the Air Force Reserves working as a Special Agent with the US Air Force Office of Special Investigation (AFOSI).  In addition, I recently retired from federal service as a Special Agent.</p>
 ​
-I have been trained in various firearms and defensive tactics and am a small arms Marksmanship expert.
+              <p>I have been trained in various firearms and defensive tactics and am a small arms Marksmanship expert.</p>
 ​
-Certified as a Federal Law Enforcement Training Center (FLETC) Active Shooter Instructor and National Rifle Association Basics Pistol Instructor.  Certified in Ultimate Training Munitions instruction as well.</p>
-              </div>
-              <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                  <img class="img-responsive" src="img/sylvia.jpg" alt="">
-              </div>
+              <p>Certified as a Federal Law Enforcement Training Center (FLETC) Active Shooter Instructor and National Rifle Association Basics Pistol Instructor.  Certified in Ultimate Training Munitions instruction as well.</p>
+            </div>
+            <div class="col-lg-8 col-lg-offset-2">
+                <img class="img-responsive" src="img/sylvia.jpg" alt="">
+            </div>
               <br/>
 
             </div>
