--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,11 +3,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Aim Point LLC</h2>
-              <p>Firearms Training for Everyone!</p>
-              <br/>
-              <h2>Founder and Firearms Instructor--Sylvia Bergstedt</h2>
-              <p>[ Retired Law Enforcement Officer ]</p>
+              <h2>Founder and Firearms Instructor<br/>Sylvia Bergstedt</h2>
+              <h3>[ Retired Law Enforcement Officer ]</h3>
               <p>I have over 28 years of military and Federal Law Enforcement training combined. In 2011 I retired as a LtCol in the Air Force Reserves working as a Special Agent with the US Air Force Office of Special Investigation (AFOSI).  In addition, I recently retired from federal service as a Special Agent.</p>
 ​
               <p>I have been trained in various firearms and defensive tactics and am a small arms Marksmanship expert.</p>
