--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
 ​
               <p>Certified as a Federal Law Enforcement Training Center (FLETC) Active Shooter Instructor and National Rifle Association Basics Pistol Instructor.  Certified in Ultimate Training Munitions instruction as well.</p>
             </div>
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-8">
                 <img class="img-responsive" src="img/sylvia.jpg" alt="">
             </div>
               <br/>
