--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,7 @@
 					<ul class="list-inline banner-social-buttons">
 						{% for social in site.social %}
 						<li>
-						<a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">Send Mail</a>
+							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
 						</li>
 						{% endfor %}
 					</ul>
