--- a/_includes/company.html
+++ b/_includes/company.html
@@ -1,5 +1,5 @@
     <!-- Company Section -->
-    <section id="company" class="container content-section text-center">
+    <section id="company" class="container content-section-a text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
