--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,11 +8,9 @@
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
-						{% for social in site.social %}
 						<li>
-							<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
+							<a href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i></a>
 						</li>
-						{% endfor %}
 					</ul>
 				</div>
 			</div>
