--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,11 +42,8 @@
 						<h1>{{ page.title }}</h1>
 						<h3>{{ page.subTitle }}</h3>
 						<hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
 							{% for social in site.social %}
-							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
-							</li>
+								<a href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
 							{% endfor %}
 						</ul>
 					</div>
