--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,10 +7,8 @@
 					<h3>Call us Today (412) 475-6359</h3>
 				</div>
 				<div class="col-lg-6">
-						<li>
-							<a href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i></a>
-						</li>
-					</ul>
+					<a href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i></a>
+					<h3>Email Us: smbergstedt@aimpointllconline.com</h3>
 				</div>
 			</div>
 
