--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
 						<h3>{{ page.subTitle }}</h3>
 						<hr class="intro-divider">
 							{% for social in site.social %}
-								<a href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
+								<a target="_top" href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
 							{% endfor %}
 						</ul>
 					</div>
