--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
 					<h3>Call us Today (412) 475-6359</h3>
 				</div>
 				<div class="col-lg-6">
-					<h3>Email Us: smbergstedt@aimpointllconline.com</h3>
+					<h3>Email Me:  smbergstedt@aimpointllconline.com</h3>
 				</div>
 			</div>
 
