--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
 				</div>
 				<div class="col-lg-6">
 					<h3>
-						<a href="mailto:smbergstedt@aimpointllconline.com">Email Me</a>
+						<a href="mailto:smbergstedt@aimpointllconline.com">Email Us</a>
 					</h3>
 				</div>
 			</div>
