--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
 				</div>
 				<div class="col-lg-6">
 					<h3>
-						<a href="mailto:smbergstedt@aimpointllconline.com">Email Usclass="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">"Email Us"</span></a>
+						<a href="mailto:smbergstedt@aimpointllconline.com">Email Us<i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
 					</h3>
 				</div>
 			</div>
