--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,9 +7,9 @@
 					<h3>Call us Today (412) 475-6359</h3>
 				</div>
 				<div class="col-lg-6">
-					<h3>
-						<a href="mailto:smbergstedt@aimpointllconline.com">Email Us<i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
-					</h3>
+					{% for social in site.social %}
+								<a target="_top" href="mailto:smbergstedt@aimpointllconline.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o"></i> <span class="network-name">{{ social.title }}</span></a>
+							{% endfor %}
 				</div>
 			</div>
 
